--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,3 +23,7 @@ environment:
 dev_dependencies:
   lints: ^2.0.0
   test: ^1.16.0
+
+screenshots:
+  - description: The package logo.
+    path: assets/logo.png
