--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -26,8 +26,8 @@ jobs:
       # - uses: dart-lang/setup-dart@v1
       - uses: dart-lang/setup-dart@v1.6.0
       
-      - name: Install dependencies
-        run: dart pub get
+      #- name: Install dependencies
+      #  run: dart pub get
 
       # Uncomment this step to verify the use of 'dart format' on each commit.
       # - name: Verify formatting
