:red_circle: Excluded example folder on running dart analyze

--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -35,7 +35,7 @@ jobs:
 
       # Consider passing '--fatal-infos' for slightly stricter analysis.
       - name: Analyze project source
-        run: dart analyze
+        run: dart analyze --exclude example/**
 
       - name: Active coverage
         run: dart pub global activate coverage
