--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: tarsier_env
 description: A Dart/Flutter package for loading `.env` files and simplifies the management of environment variables and helps automate the process of accessing them within your project.
-version: 1.0.3
+version: 1.0.5
 homepage: https://github.com/marianz-bonfire/tarsier_env
 repository: https://github.com/marianz-bonfire/tarsier_env
 issue_tracker: https://github.com/marianz-bonfire/tarsier_env/issues
@@ -14,15 +14,18 @@ platforms:
   windows:
   linux:
 
-environment:
-  sdk: '>=2.18.6 <3.0.0'
+executables:
+  tarsier_env:
 
-# dependencies:
-#   path: ^1.8.0
+environment:
+  sdk: ^3.2.1
+
+dependencies:
+  tarsier_logger: ^1.0.3
 
 dev_dependencies:
-  lints: ^2.0.0
-  test: ^1.16.0
+  lints: ^2.1.0
+  test: ^1.24.0
 
 screenshots:
   - description: The package logo.
