:fire: Enhanced .env parsing
* Optimized parsing for better readability.
* Improved parsing or `.env` content
    - Keeps `#` inside values if there’s no space before it
    - Removes inline comments only when a space exists before `#`
    - Trims surrounding double quotes
    - Supports variable referencing (`${VAR_NAME}`)
    - Handles concatenation (e.g., `"${APP_URL}${APP_PATH}"`)
    - Removes quotes & skips comments properly
+ Added function to get value dynamically for any type while providing a valid default fallback.
+ Added pubspec topics

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,12 @@ homepage: https://github.com/marianz-bonfire/tarsier_env
 repository: https://github.com/marianz-bonfire/tarsier_env
 issue_tracker: https://github.com/marianz-bonfire/tarsier_env/issues
 
+topics:
+  - tarsier
+  - env
+  - environment
+
+
 # This package supports all platforms listed below.
 platforms:
   android:
